results/a53f6ac112b58992ea09dea59f6a29ae/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper({fitarraystring}, emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, a53f6ac112b58992ea09dea59f6a29ae, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
